Fix overflow issue in archive card CSS

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -94,7 +94,7 @@
     display: inline-block;
     vertical-align:middle;
     width:20%;
-    overflow: hidden;
+    //overflow: hidden;
     img {
       min-width: 150px;
     }
